--- a/index.textile
+++ b/index.textile
@@ -1,6 +1,6 @@
 ---
 layout: static
-title: Darknoon
+title: Blog
 ---
 
 {% for post in site.posts limit:3 %}
@@ -9,7 +9,6 @@ h1. {{ post.title }}
 
 p(date). {{ post.date | date: "%B %d %Y"  }}
 
-<div>
 <notextile>
 {{ post.content }}
 </notextile>
