--- a/_posts/2008-12-08-deconstructing-classicsapp.textile
+++ b/_posts/2008-12-08-deconstructing-classicsapp.textile
@@ -15,7 +15,7 @@ While there have been blog posts about <a href="http://blog.cocoia.com/2008/10/2
 When I first saw the video on the Classics website, I was stunned. Here's a frame from their demo video:
 
 
-!http://darknoon.com/blog/wp-content/uploads/2008/12/classics-movie.png!
+!/images/old/2008/12/classics-movie.png!
 <p class="caption">Screen capture from the intro video on Classics. Comments are mine.</p>
 
 
@@ -30,7 +30,7 @@ To get the page ripple effect, throw in some OpenGL ES, code some mesh distortio
 When I finally got a chance to download the App, I was overall very happy with it, though I had to turn off the page-turning sound immediately. This isn't a review, though, so *moving along*, I'll skip to a closer examination of the page-flip effect.
 
 
-!http://darknoon.com/blog/wp-content/uploads/2008/12/screenshot-20081208-011335.png!
+!/images/old/2008/12/screenshot-20081208-011335.png!
 <p class="caption">Taking a closer look, some things become clearer</p>
 
 
@@ -38,7 +38,7 @@ When the page is flipping, it has a soft appearance that looks very fishy. Hmm. 
 
 That still leaves the mystery of text rendering, and for that, we'll have to delve into the application bundle. Using the technique from my last post, I opened the bundle and converted all of the PNGs.
 
-!http://darknoon.com/blog/wp-content/uploads/2008/12/classics.png!
+!/images/old/2008/12/classics.png!
 <p class="caption">The flip animation PNGs, in all of their glory</p>
 
  
@@ -49,7 +49,7 @@ Ah-ha, so that confirms our suspicion about the flip animation being just a sequ
 
 <div style="text-align:center">
 
-!http://darknoon.com/blog/wp-content/uploads/2008/12/flip13.png! vs !http://darknoon.com/blog/wp-content/uploads/2008/12/flip13adjusted.png!
+!/images/old/2008/12/flip13.png! vs !/images/old/2008/12/flip13adjusted.png!
 
 </div>
 
@@ -57,7 +57,7 @@ However, lest you think that the authors of Classics are just trying to screw wi
 
 Now, let's figure out how Classics is doing its text rendering. Note the .classic folders which seem to contain the books themselves. When we open them up, they're full of...
 
-!http://darknoon.com/blog/wp-content/uploads/2008/12/a-christmas-carolclassic-1.png!
+!/images/old/2008/12/a-christmas-carolclassic-1.png!
 <p class="caption">Holy Adobe!</p>
 
 
