--- a/index.textile
+++ b/index.textile
@@ -5,7 +5,7 @@ title: Blog
 
 {% for post in site.posts limit:3 %}
 
-h1. {{ post.title }}
+<h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 
 p(date). {{ post.date | date: "%B %d %Y"  }}
 
@@ -19,6 +19,6 @@ h2. Older posts
 
 {% for post in site.posts %}
 {% if forloop.index > 3 %}
-* {{ post.title }} "{{ post.title }}"{{ post.url }}
+* <a href="{{ post.url }}">{{ post.title }}</a>
 {% endif %}
 {% endfor %}
