--- a/index.textile
+++ b/index.textile
@@ -6,6 +6,7 @@ permalink: /
 
 {% for post in site.posts limit:3 %}
 
+<div>
 <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 
 p(date). {{ post.date | date: "%B %d %Y"  }}
@@ -14,6 +15,7 @@ p(date). {{ post.date | date: "%B %d %Y"  }}
 {{ post.content }}
 </notextile>
 
+</div>
 {% endfor %}
 
 h2. Older posts
