--- a/index.textile
+++ b/index.textile
@@ -28,7 +28,11 @@ permalink: /
 {% for post in site.posts limit:3 %}
 
 <div>
+{% if post.link %}
+<h1><a href="{{ post.link }}">Linked: {{ post.title }}</a></h1>
+{% else %}
 <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+{% endif %}
 
 p(date). {{ post.date | date: "%B %d %Y"  }}
 
