--- a/about.textile
+++ b/about.textile
@@ -1,18 +1,33 @@
 ---
 layout: static
 title: About
+stylesheet: about
 ---
+
+<div class="leftside">
+p(hero). !/images/about/me.jpeg!
 
 h1. Andrew Pouliot
 
 Programmer, designer, artist.
 
+</div>
+
+<div class="rightside">
+
+
 I have been building apps for the iPhone since the release of the official SDK in 2008 and apps for iPad since its announcement. I work with filmmakers, tiny startups, airlines, internet companies, international retailers, and my friends to build apps for the iPhones, iPod touches, and iPads.
 
 I specialize in making smooth, 60-fps, responsive UI.
 
-Design isn't skin deep. I work throughout the apps' architectures to achieve responsiveness and timely, beautiful display of graphics and information. Often this requires asynchronous image processing, optimized animations, and performance-tuned c or c++ code. I have a particular interest and expertise in hardware accellerated 2D/3D graphics in OpenGL ES 2.0 and Core Animation. Other topics of interest include efficent networking, geolocation, and web services.
+My work is design, from how the app looks and feels to how the internals are architected. Performance optimization is about ensuring and timely, beautiful display of graphics and information.
 
-h2. Hire
+Often this requires asynchronous image processing, bouncy animations, and performance-tuned c or c++ code. I have a particular interest and expertise in hardware accelerated 2D/3D graphics in OpenGL ES 2.0 and Core Animation.
 
-I am sometimes available for contract development. If you are interested, email <code>andrew</code> at this domain and I'll get back to you.
+I'm of the opinion that dropping a frame (1/60th of a second of lag) is an inexcusable hiccup for an app.
+
+</div>
+
+h2. Contact
+
+Email <code>andrew</code> at this domain and I'll get back to you.
