Add upscale test

--- a/src/_posts/2020-02-20-gan-hacking.mdx
+++ b/src/_posts/2020-02-20-gan-hacking.mdx
@@ -151,9 +151,9 @@ def hack_layer(z):
 
 ```
 
-<section id="results-1">
+<section id="results-tile">
 
-### Results
+### Tiling the image
 
 
 <MultiImage>
@@ -185,9 +185,44 @@ def hack_layer(z):
   after layer 12
   ![](images/gan-hacking/valley-seed13-trunc0_5/layer12-2x2.png)
 
+</MultiImage>
 
+</section>
+
+<section id="results-upscale">
+
+<MultiImage>
+
+  Original output upscaled
+  ![](images/gan-hacking/valley-seed13-trunc0_5/start-upx2.png)
+
+  before layer 0
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer-1-upx2.png)
+
+  after layer 0
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer00-upx2.png)
+
+  after layer 1
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer01-upx2.png)
+
+  after layer 3
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer03-upx2.png)
+
+  after layer 4
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer04-upx2.png)
+
+  after layer 5
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer05-upx2.png)
+
+  after layer 9
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer09-upx2.png)
+
+  after layer 11
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer11-upx2.png)
+
+  after layer 12
+  ![](images/gan-hacking/valley-seed13-trunc0_5/layer12-upx2.png)
 
 </MultiImage>
 
-
-</section>
+  </section>
